fix resize panel in windows

--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -44,6 +44,10 @@
 	.editorControls.isDraggingOver { background: rgba(255,187,44,0.3); }
 }
 
+html.platformWindows {
+	.editorWrapper #editorSize { top: 78px; }
+}
+
 .editorWrapper.isResizing #editorSize { visibility: visible; }
 
 .editorWrapper.withDescription {
