MenuBlockMore for files

--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -66,6 +66,9 @@ html.platformWindows {
 	.editorControls.align1 {
 		.buttons { left: 50%; padding-left: 68px; }
 	}
+	.editorControls.align2 {
+		.buttons { padding-left: 0px; }
+	}
 }
 
 .editorWrapper.withCover { padding-top: 356px; }
