--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -13,7 +13,8 @@
 			.name { @include text-overflow-nw; }
 		}
 		.item:hover::before { background: rgba(172, 169, 150, 0.15); }
-		.item.isReadOnly:hover::before { opacity: 0; }
+
+		.item.isReadOnly::before { opacity: 0 !important; }
 
 		#section-page0 { padding-top: 0px; }
 	}
