fix block relation readOnly mode

--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -71,4 +71,11 @@
 			.cellContent { box-shadow: 0px 0px; border: 0px; padding: 5px 8px; }
 		}
 	}
+
+	.block.blockRelation.isReadOnly > .wrapContent > .selectable > .dropTarget {
+		.info {
+			.input { visibility: hidden; }
+			.icon.relation { visibility: hidden; }
+		}
+	}
 }
