--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -58,8 +58,9 @@
 		.icon.clock { background-image: url('~img/icon/menu/action/clock0.svg'); }
 		.icon.settings { background-image: url('~img/icon/menu/action/settings0.svg'); }
 		.icon.expand { background-image: url('~img/icon/menu/action/expand0.svg'); }
-		.icon.resize { background-image: url('~img/icon/menu/action/expand0.svg'); }
+		.icon.resize { background-image: url('~img/icon/menu/action/resize0.svg'); }
 		.icon.template { background-image: url('~img/icon/menu/action/template0.svg'); }
+		.icon.fav { background-image: url('~img/icon/menu/action/fav0.svg'); }
 
 		.icon.align.left { background-image: url('~img/icon/menu/align/left.svg'); }
 		.icon.align.center { background-image: url('~img/icon/menu/align/center.svg'); }
