--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -27,4 +27,5 @@ html.debug {
 	
 	.focusable.isFocused { border: 1px dotted green; }
 
+	.isHidden { background: rgba(255,192,203,0.3) !important; }
 } 
