--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -3,6 +3,8 @@
 .blocks {
 	.block.blockDataview { @include text-common; }
 	.block.blockDataview {
+		.wrapContent { width: 100%; }
+
 		.icon.plus { width: 20px; height: 20px; background-image: url('~img/icon/plus/menu0.svg'); cursor: pointer; }
 		.icon.plus:hover { background-image: url('~img/icon/plus/menu1.svg'); }
 		
@@ -16,7 +18,7 @@
 
 		.isDone { color: $colorDarkGrey; }
 
-		.views { @include text-header3; color: $colorDarkGrey; margin-bottom: 20px; }
+		.views { @include text-header3; color: $colorDarkGrey; }
 		.views {
 			.item { 
 				margin-right: 20px; display: inline-block; vertical-align: middle; transition: color 0.2s ease-in-out; cursor: pointer; 
