--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -5,6 +5,7 @@
     .menu.menuDataviewRelationList, 
     .menu.menuDataviewRelationEdit, 
 	.menu.menuRelationSuggest, 
+	.menu.menuDataviewViewEdit,
     .menu.menuDataviewViewList,
 	.menu.menuDataviewObjectType,
 	.menu.menuDataviewObjectValues,
