--- a/src/scss/component/switch.scss
+++ b/src/scss/component/switch.scss
@@ -12,6 +12,7 @@
 }
 .switch.active { background: #6c6a5f; }
 .switch.green.active { background: $colorLime; }
+.switch.orange.active { background: #ffd15b; }
 
 .switch.active {
 	.inner { left: auto; right: 2px; }
