--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -35,6 +35,7 @@
 		.buttons { display: flex; margin-bottom: 8px; font-weight: 500; color: $colorDarkGrey; }
 		.buttons {
 			.side { width: 50%; white-space: nowrap; }
+			.side.left { padding-left: 14px; }
 			.side.right { text-align: right; }
 			.item { 
 				display: inline-block; vertical-align: top; cursor: pointer; transition: $transitionFast; margin-right: 14px; 
