CU-cjxyq8: Controls

--- a/src/scss/popup/search.scss
+++ b/src/scss/popup/search.scss
@@ -15,8 +15,8 @@
 		}
 		.head {
 			.iconObject { margin-right: 6px; }
-			.icon {  width: 20px; height: 20px; vertical-align: top; margin-right: 6px; }
-			.icon.search { background-size: 18px 18px; background-image: url('~img/icon/search.svg'); }
+			.icon { width: 20px; height: 20px; vertical-align: top; margin-right: 6px; }
+			.icon.search { background-image: url('~img/icon/search.svg'); }
 			.input { 
 				padding: 0px; height: 20px; vertical-align: middle; width: calc(100% - 32px); font-size: 14px; line-height: 20px; 
 				vertical-align: top;
