--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -37,43 +37,28 @@
 			.side { width: 50%; white-space: nowrap; }
 			.side.left { padding-left: 14px; }
 			.side.right { text-align: right; }
-			.item { 
-				display: inline-block; vertical-align: top; cursor: pointer; transition: $transitionFast; margin-right: 14px; 
-				position: relative; text-align: left; line-height: 20px;
-			}
-			.item:last-child { margin: 0px; }
-			.item:hover, .item.active { color: $colorBlack; }
-			
-			.item {
-				.icon { width: 20px; height: 20px; margin: 0px 4px 0px 0px; vertical-align: top; }
-				.icon.relation { background-image: url('~img/icon/dataview/button/relation0.svg'); }
-				.icon.filter { background-image: url('~img/icon/dataview/button/filter0.svg'); }
-				.icon.sort { background-image: url('~img/icon/dataview/button/sort0.svg'); }
-				.icon.more { background-image: url('~img/icon/dataview/button/more0.svg'); }
 
-				.icon.arrow { 
-					margin: -6px 0px 0px 0px; width: 12px; height: 12px; background-image: url('~img/icon/dataview/button/arrow0.svg');
-					position: absolute; right: 0px; top: 50%;
-				}
-				
-				.icon.view { margin: 0px; }
-				.name { display: inline-block; vertical-align: top; }
-			}
-			.item.view { width: 32px; }
-			
-			.item:hover, .item.active {
-				.icon.plus { background-image: url('~img/icon/plus/menu1.svg'); }
-				.icon.arrow { background-image: url('~img/icon/dataview/button/arrow1.svg'); }
-				.icon.relation { background-image: url('~img/icon/dataview/button/relation1.svg'); }
-				.icon.filter { background-image: url('~img/icon/dataview/button/filter1.svg'); }
-				.icon.sort { background-image: url('~img/icon/dataview/button/sort1.svg'); }
-				.icon.more { background-image: url('~img/icon/dataview/button/more1.svg'); }
-			}
+			.icon { vertical-align: top; cursor: pointer; transition: $transitionFast; position: relative; width: 20px; height: 20px; margin: 0px 18px 0px 0px; }
+			.icon:last-child { margin: 0px; }
 
-			.item.on { color: #e89d00; }
-			.item.on {
-				.icon.filter { background-image: url('~img/icon/dataview/button/filter2.svg'); }
-				.icon.sort { background-image: url('~img/icon/dataview/button/sort2.svg'); }
+			.icon {
+				.dot { width: 6px; height: 6px; border-radius: 100%; position: absolute; right: -4px; top: -4px; background: $colorOrange; display: none; }
+			}
+			
+			.icon.search { background-image: url('~img/icon/dataview/button/search0.svg'); }
+			.icon.manager { background-image: url('~img/icon/dataview/button/manager0.svg'); }
+			.icon.more { background-image: url('~img/icon/dataview/button/more0.svg'); }
+
+			.icon.relation { background-image: url('~img/icon/dataview/button/relation0.svg'); }
+			.icon.filter { background-image: url('~img/icon/dataview/button/filter0.svg'); }
+			.icon.sort { background-image: url('~img/icon/dataview/button/sort0.svg'); }
+
+			.icon.search:hover, .icon.search.active { background-image: url('~img/icon/dataview/button/search1.svg'); }
+			.icon.manager:hover, .icon.manager.active { background-image: url('~img/icon/dataview/button/manager1.svg'); }
+			.icon.more:hover, .icon.more.active { background-image: url('~img/icon/dataview/button/more1.svg'); }
+
+			.icon.on {
+				.dot { display: block; }
 			}
 		}
 		
