--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -96,7 +96,8 @@
 	.iconImage { border-radius: 8px; }
 }
 
-.iconObject.c48.isRelation { border-radius: 8px; background-color: #f3f2ec; }
+.iconObject.c48.isRelation, 
+.iconObject.c40.isRelation { border-radius: 8px; background-color: #f3f2ec; }
 
 .iconObject.isUser { border-radius: 100%; }
 
