--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -29,11 +29,10 @@
     .menu.menuDataviewFilter,
     .menu.menuDataviewSort {
 		.item {
-            .icon.dnd { vertical-align: middle; }
+            .icon.dnd { vertical-align: top; height: 40px; background-size: 20px; margin: 0px; }
             .icon.relation { margin-right: 4px; }
 
-			.select { @include text-common; margin-right: 8px; line-height: 20px; }
-			.select:last-child { margin: 0px; }
+			.select { @include text-common; line-height: 20px; }
 			.select {
 				.name { line-height: inherit; }
 			}
