--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -1,18 +1,16 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuDataviewFilter { width: 400px; }
+	.menu.menuDataviewFilter { width: 352px; }
 	.menu.menuDataviewFilter {
 		.content { max-height: 350px; }
 
-		.item { padding: 4px 40px 4px 10px; line-height: 28px; position: relative; white-space: nowrap; }
+		.item { padding: 4px 10px; line-height: 28px; position: relative; white-space: nowrap; }
 		.item {
-			.icon.dnd { vertical-align: top; margin-top: 4px; }
 			.icon.delete { opacity: 1; }
-			.input { 
-				flex-shrink: 2; border-radius: 4px; border: solid 1px #d2d0c2; padding: 0px 6px; height: 28px; width: 160px; 
-				user-select: text;
-			}
+			.input { user-select: text; height: 22px; border: 0px; padding: 0px; }
+
+			.icon.delete { top: 10px; margin: 0px; opacity: 0; }
 
 			.icon.checkbox { 
 				width: 32px; height: 28px; margin: 0px; background-image: url('~img/icon/dataview/checkbox0.svg'); 
@@ -20,11 +18,17 @@
 			}
 			.icon.checkbox.active { background-image: url('~img/icon/dataview/checkbox1.svg'); }
 
-			.select { vertical-align: top; max-width: 150px; overflow: hidden; }
+			.select { overflow: hidden; border: 0px; padding: 0px; display: block; }
 			.select.operator { width: auto; }
 			.select.operator .name { overflow: visible; }
-			.select:last-child { margin: 0px; }
+			.select:hover, .select.active { background: none; }
 
+			.select.isList { margin: 0px; }
+			.select.isList.withValues { padding-right: 0px; }
+
+			.iconObject { margin-right: 10px; }
+			
+			.select.grey { color: $colorDarkGrey; }
 			.select {
 				.element { display: inline-block; margin-right: 6px; line-height: 20px; }
 				.element {
@@ -32,11 +36,16 @@
 					.name { width: 100%; @include text-overflow-nw; }
 					.tagItem { vertical-align: top; margin-top: 1px; }
 				}
+				.icon.arrow { display: none; }
 			}
-			.select.isList { width: 150px; margin: 0px; }
-			.select.isList.withValues { padding-right: 0px; }
 
-			.txt { height: 28px; line-height: 28px; margin-right: 8px; display: inline-block; vertical-align: top; }
+			.value { padding: 10px 0px; margin: 0px 6px 0px 22px; border-bottom: 1px solid #eae9e0; }
+
+			.txt { width: calc(100% - 72px); }
+		}
+
+		.item:hover {
+			.icon.delete { opacity: 1; }
 		}
 
 		.item.add { display: block; }
