--- a/src/scss/menu/dataview/option.scss
+++ b/src/scss/menu/dataview/option.scss
@@ -51,6 +51,7 @@
 		.wrap { padding: 8px 16px; }
 		.input { border: 1px solid $colorLightGrey; font-size: 12px; padding: 0px 8px; }
 		.item:hover::before { background: rgba(172, 169, 150, 0.15); }
+		.item.active::before { z-index: 1; }
 	}
 
 	.menu.menuDataviewOptionValues.fromFilter {
