--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -7,7 +7,7 @@
 		.block {
 			.wrapMenu { display: none; }
 		}
-		.block.blockFeatured { @include text-common; padding: 0px; margin: 0px; line-height: 20px; }
+		.block.blockFeatured { padding: 0px; margin: 0px; line-height: 20px; }
 		.block.blockFeatured {
 			.bullet { margin-top: -2px; }
 		}
