--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -86,4 +86,4 @@
 	}
 }
 
-.pageMainSet > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
+.pageMainType > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
