--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -19,6 +19,8 @@
 			.tagItem { margin-top: -4px; margin-right: 6px; vertical-align: middle; }
 			.tagItem:last-child { margin-right: 0px; }
 
+			.icon.checkbox { vertical-align: top; }
+
 			.iconObject { display: none; }
 			.name { vertical-align: middle; line-height: inherit; display: inline; word-break: break-word; }
 		}
