--- a/src/scss/page/main/media.scss
+++ b/src/scss/page/main/media.scss
@@ -14,6 +14,10 @@
 		.side { width: 50%; }
 		.side.left { margin-right: 32px; }
 		.block.blockMedia { max-height: 100%; }
+		.block.blockMedia * { width: 100%; height: 100%; }
+		.block.blockMedia {
+			img.media { width: auto; height: auto; max-width: 100%; }
+		}
 		.iconObject { width: 100%; height: 100%; border-radius: 6px; background: rgba(172,169,150,0.1); }
 	}
 
