--- a/src/scss/page/main/set.scss
+++ b/src/scss/page/main/set.scss
@@ -30,4 +30,4 @@
 	}
 }
 
-.pageMainType > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
+.pageMainSet > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
