--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -5,10 +5,13 @@
 	.block.blockFeatured {
 		.wrap { white-space: normal; }
 
-		.bullet { width: 4px; height: 4px; border-radius: 100%; background: #6c6a5f; display: inline-block; vertical-align: middle; margin: 0px 2px; }
+		.bullet { width: 4px; height: 4px; border-radius: 100%; background: #929082; display: inline-block; vertical-align: middle; margin: 0px 2px; }
 		.element { display: inline-block; cursor: pointer; }
 
-		.cellContent { display: inline; vertical-align: middle; padding: 5.5px 6px; transition: background 0.2s ease-in-out; }
+		.button { padding: 5px 6px; color: #e88b00; @include text-common; height: 28px; line-height: 17px; vertical-align: top; }
+		.button:hover { background: #fef3c5; }
+
+		.cellContent { display: inline; vertical-align: middle; padding: 5px 6px; transition: background 0.2s ease-in-out; cursor: default; }
 		.cellContent:hover { background: rgba(172,169,150,0.1); }
 		.cellContent > .wrap { display: inline; }
 		.cellContent.isName .name { display: inline; }
