--- a/src/scss/menu/dataview/media.scss
+++ b/src/scss/menu/dataview/media.scss
@@ -10,7 +10,7 @@
 			.name { line-height: 20px; width: calc(100% - 26px); @include text-overflow-nw; }
 			.clickable { width: calc(100% - 20px); display: inline-block; vertical-align: top; }
 		}
-		.item:hover, .item.active {
+		.item.isFile:hover, .item.isFile.active {
 			.clickable { width: calc(100% - 46px); }
 		}
 		.item:hover::before { background: rgba(172, 169, 150, 0.15); }
