--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -44,6 +44,7 @@
 	.icon.add { background-image: url('~img/icon/header/add.svg'); }
 	.icon.settings { background-image: url('~img/icon/header/settings.svg'); }
 	.icon.expand { background-image: url('~img/icon/header/expand.svg'); }
+	.icon.relation { background-image: url('~img/icon/header/relation.svg'); }
 
 	.side { position: absolute; top: 5px; height: 28px; line-height: 28px; }
 
