--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -9,7 +9,7 @@
 		.element { display: inline-block; cursor: pointer; }
 
 		.cellContent { display: inline; vertical-align: middle; padding: 5px 6px; transition: background 0.2s ease-in-out; }
-		.cellContent:hover { background: rgba(172,169,150,0.1); }
+		.cellContent:hover, .cellContent.hover { background: rgba(172,169,150,0.1); }
 		.cellContent > .wrap { display: inline; }
 		.cellContent.isName .name { display: inline; }
 		.cellContent {
@@ -24,6 +24,10 @@
 			.iconObject { display: none; }
 			.name { vertical-align: middle; line-height: inherit; display: inline; word-break: break-word; }
 		}
+	}
+
+	.block.blockFeatured.align0 {
+		.cellContent.type { margin-left: -6px; }
 	}
 }
 
