--- a/src/scss/menu/search/object.scss
+++ b/src/scss/menu/search/object.scss
@@ -31,4 +31,11 @@
 			.caption { display: none; }
 		}
 	}
+
+	.menu.menuSearchObject.big { width: 360px; }
+	.menu.menuSearchObject.big {
+		.item {
+			.iconObject { background: #f3f2ec; }
+		}
+	}
 }
