CU-hq5jpq: Fixes

--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -3,6 +3,9 @@
 .blocks {
 	.block.blockFeatured { @include text-common; line-height: 28px; color: #6c6a5f; white-space: nowrap; padding: 2px 0px 30px 0px; display: none; }
 	.block.blockFeatured {
+		.icon.checkbox { width: 20px; height: 20px; vertical-align: middle; margin-top: -4px; background-image: url('~img/icon/dataview/checkbox0.svg'); }
+		.icon.checkbox.active { background-image: url('~img/icon/dataview/checkbox1.svg'); }
+
 		.wrap { white-space: normal; }
 
 		.bullet { width: 4px; height: 4px; border-radius: 100%; background: #929082; display: inline-block; vertical-align: middle; margin: 0px 2px; }
@@ -13,17 +16,17 @@
 		.cellContent > .wrap { display: inline; }
 		.cellContent.isName .name { display: inline; }
 		.cellContent {
-			.element { margin-bottom: 0px; vertical-align: top; line-height: inherit; background: none !important; }
+			.element { margin-bottom: 0px; vertical-align: middle; line-height: inherit; background: none !important; }
 			.element:last-child { margin-right: 0px; }
 
-			.tagItem { margin-top: -4px; margin-right: 6px; vertical-align: middle; }
+			.tagItem { margin-top: -3px; margin-right: 6px; vertical-align: middle; }
 			.tagItem:last-child { margin-right: 0px; }
 
-			.icon.checkbox { vertical-align: top; }
-
 			.iconObject { display: none; }
-			.name { vertical-align: middle; line-height: inherit; display: inline; word-break: break-word; }
+			.name { vertical-align: baseline; line-height: inherit; display: inline; word-break: break-word; }
 		}
+
+		.cellContent.c-checkbox { padding: 5px 3px; }
 	}
 
 	.block.blockFeatured.align0 {
