--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -21,6 +21,8 @@ html.debug {
 		.block.blockText.code {
 			.icon.codeWrap { background-color: rgba(0, 0, 255, 0.1); }
 		}
+
+		.block.blockFeatured .cellContent { background-color: rgba(0, 0, 255, 0.1) !important; }
 	}
 
 	.blockLast { background: rgba(0,0,255,0.1); }
