CU-hq5jpq: Fixes

--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -9,14 +9,13 @@
 		.wrap { white-space: normal; }
 
 		.bullet { width: 4px; height: 4px; border-radius: 100%; background: #929082; display: inline-block; vertical-align: middle; margin: 0px 2px; }
-		.element { display: inline-block; cursor: pointer; }
 
 		.cellContent { display: inline; vertical-align: middle; padding: 5px 6px; transition: background 0.2s ease-in-out; }
 		.cellContent:hover, .cellContent.hover { background: rgba(172,169,150,0.1); }
 		.cellContent > .wrap { display: inline; }
 		.cellContent.isName .name { display: inline; }
 		.cellContent {
-			.element { margin-bottom: 0px; vertical-align: middle; line-height: inherit; background: none !important; }
+			.element { margin-bottom: 0px; vertical-align: middle; margin-top: -3px; line-height: inherit; background: none !important; }
 			.element:last-child { margin-right: 0px; }
 
 			.tagItem { margin-top: -3px; margin-right: 6px; vertical-align: middle; }
