--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -14,7 +14,7 @@
 
 		.sides { display: flex; }
 
-		.info { padding: 6px 2px; line-height: 20px; width: 30%; min-width: 40px; flex-shrink: 0; @include text-overflow-nw; }
+		.info { padding: 6px 2px 6px 0px; line-height: 20px; width: 30%; min-width: 40px; flex-shrink: 0; @include text-overflow-nw; }
 		.info.noValue { width: 100%; }
 		.info {
 			.input { width: calc(100% - 24px); height: 20px; line-height: 20px; }
