--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -79,11 +79,17 @@
 
 		#section-featured::after { display: block; }
 
-		.item { padding: 0px 28px; margin-bottom: 1px; }
+		.item { padding: 0px 22px; margin-bottom: 1px; }
 		.item {
 			.icon.plus { margin-right: 4px; }
 
-			.info { padding: 6px 2px; }
+			.icon.fav {
+				width: 32px; height: 32px; background-size: 20px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; border-radius: 4px; 
+			}
+			.icon.fav.active { background-image: url('~img/icon/fav1.svg'); }
+			.icon.fav:hover { background-color: rgba(172,169,150,0.15); }
+
+			.info { padding: 5px 8px; margin-right: 6px; }
 			.info:hover { background: rgba(172,169,150,0.15); }
 
 			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: calc(100% - 218px); line-height: 22px; transition: background 0.2s ease-in-out; }
@@ -141,9 +147,6 @@
 			.cell.isEditing.c-longText, .cell.isEditing.c-file { 
 				.cellContent { box-shadow: 0px 0px; border: 0px; padding: 5px 8px; }
 			}
-
-			.icon.fav { margin: 5px 0px 0px 0px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; }
-			.icon.fav:hover, .icon.fav.active { background-image: url('~img/icon/fav1.svg'); }
 		}
 		.item * { cursor: pointer; }
 	}
