featured relations fix

--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -15,7 +15,7 @@
 		.cellContent > .wrap { display: inline; }
 		.cellContent.isName .name { display: inline; }
 		.cellContent {
-			.element { margin-bottom: 0px; vertical-align: middle; margin-top: -3px; line-height: inherit; background: none !important; }
+			.element { margin-bottom: 0px; margin-right: 6px; vertical-align: middle; margin-top: -3px; line-height: inherit; background: none !important; }
 			.element:last-child { margin-right: 0px; }
 
 			.tagItem { margin-top: -3px; margin-right: 6px; vertical-align: middle; }
