--- a/src/scss/menu/search/object.scss
+++ b/src/scss/menu/search/object.scss
@@ -34,6 +34,7 @@
 
 	.menu.menuSearchObject.big { width: 360px; }
 	.menu.menuSearchObject.big {
+		.content { height: 360px !important; }
 		.item {
 			.iconObject { background: #f3f2ec; }
 		}
