--- a/src/scss/page/main/relation.scss
+++ b/src/scss/page/main/relation.scss
@@ -15,8 +15,9 @@
 
 		.block {
 			.wrapMenu { display: none; }
+			.wrapContent { width: 100%; }
 		}
-		.block.blockFeatured { padding: 0px; margin: 0px; line-height: 20px; }
+		.block.blockFeatured { padding: 0px; margin: 0px; line-height: 28px; }
 
 		.section { margin-bottom: 32px; }
 		.section:last-child { margin: 0px; }
