--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -6,8 +6,9 @@
 
 		.block {
 			.wrapMenu { display: none; }
+			.wrapContent { width: 100%; }
 		}
-		.block.blockFeatured { padding: 0px; margin: 0px; line-height: 20px; }
+		.block.blockFeatured { padding: 0px; margin: 0px; line-height: 28px; }
 
 		.head { display: flex; margin-bottom: 35px; }
 		.head {
