--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -145,7 +145,7 @@
 			}
 
 			.cell.isEditing.c-longText, .cell.isEditing.c-file { 
-				.cellContent { box-shadow: 0px 0px; border: 0px; padding: 5px 8px; }
+				.cellContent { padding: 5px 8px; }
 			}
 		}
 		.item * { cursor: pointer; }
