--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -141,6 +141,7 @@
 				.name, span { -webkit-line-clamp: 3; -webkit-box-orient: vertical; display: -webkit-box; overflow: hidden; }
 			}
 			.cell.isEditing.c-longText {
+				.cellContent { box-shadow: 0px 0px; visibility: hidden; }
 				.cellContent span:empty { height: 22px; }
 			}
 
