--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -16,15 +16,8 @@
 
 		.info { 
 			width: 192px; @include text-overflow-nw; line-height: 20px; border-radius: 4px; transition: background 0.2s ease-in-out; 
-			flex-shrink: 0; 
+			flex-shrink: 0; margin-right: 6px;
 		}
-		.info {
-			.name { 
-				display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
-				width: calc(100% - 24px); color: #6c6a5f;
-			}
-		}
-
 	}
 
 	.menu.menuBlockRelationList { width: 640px; }
@@ -89,7 +82,7 @@
 			.icon.fav.active { background-image: url('~img/icon/fav1.svg'); }
 			.icon.fav:hover { background-color: rgba(172,169,150,0.1); }
 
-			.info { padding: 5px 8px; margin-right: 6px; }
+			.info { padding: 5px 8px; }
 			.info:hover { background: rgba(172,169,150,0.1); }
 
 			.cell { padding: 5px 8px; margin-right: 6px; border-radius: 4px; width: calc(100% - 242px); line-height: 22px; transition: background 0.2s ease-in-out; }
