CU-j53a3n: Fix menuDataviewText position

--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -124,8 +124,7 @@ html.platformWindows {
 				.note { text-align: right; color: #aca996; display: block; }
 		
 				.icon { width: 20px; height: 20px; margin-top: -4px; }
-				.icon.help { background-image: url('~img/icon/help/dark0.svg'); }
-				.icon.help:hover { background-image: url('~img/icon/help/dark0.svg'); }
+				.icon.help { background-image: url('~img/icon/help.svg'); }
 
 				.icon.nav { background-image: url('~img/icon/header/nav.svg'); }
 		
