--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -14,11 +14,7 @@
 .icon.forward { transform: rotateZ(180deg); }
 .icon.back:hover, .icon.forward:hover { background-image: url('~img/icon/back1.svg'); }
 
-.icon.help { width: 22px; height: 22px; background-image: url('~img/icon/help/dark0.svg'); }
-.icon.help:hover { background-image: url('~img/icon/help/dark1.svg'); }
-
-.icon.help.light { background-image: url('~img/icon/help/light0.svg'); }
-.icon.help.light:hover { background-image: url('~img/icon/help/light0.svg'); }
+.icon.help { width: 28px; height: 28px; background-image: url('~img/icon/help.svg'); }
 
 .icon.checkbox { width: 24px; height: 24px; background-image: url('~img/icon/checkbox0.svg'); cursor: pointer; }
 .icon.checkbox.active { background-image: url('~img/icon/checkbox1.svg'); }
