--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -142,7 +142,7 @@
 			}
 
 			.caption { 
-				width: 80px; @include text-overflow-nw; display: inline-block; vertical-align: top; color: $colorDarkGrey; @include text-small; text-align: right;
+				@include text-overflow-nw; display: inline-block; vertical-align: top; color: $colorDarkGrey; @include text-small; text-align: right;
 				flex-shrink: 0;
 			}
 		}
