CU-j39a1v: MenuDataviewFilter -> MenuDataviewFilterList, MenuDataviewValues added

--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuDataviewFilter { width: 360px; }
-	.menu.menuDataviewFilter {
+	.menu.menuDataviewFilterList { width: 360px; }
+	.menu.menuDataviewFilterList {
 		.content { max-height: 350px; }
 
 		.item { padding: 4px 10px; line-height: 28px; position: relative; white-space: nowrap; }
