--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -11,7 +11,7 @@
 	.menu.menuDataviewObjectValues,
 	.menu.menuDataviewOptionList,
 	.menu.menuDataviewOptionValues,
-	.menu.menuDataviewFilter,
+	.menu.menuDataviewFilterList,
 	.menu.menuDataviewSort
 	{
         .item:hover::before { background: rgba(172, 169, 150, 0.1); }
@@ -26,7 +26,7 @@
 		.label { color: $colorDarkGrey; @include text-small; padding: 0px 16px; font-weight: 500; margin-bottom: 8px; }
     }
 
-    .menu.menuDataviewFilter,
+    .menu.menuDataviewFilterList,
     .menu.menuDataviewSort {
 		.item {
             .icon.dnd { vertical-align: top; height: 40px; background-size: 20px; margin: 0px; }
