--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -12,6 +12,7 @@
 	.menu.menuDataviewOptionList,
 	.menu.menuDataviewOptionValues,
 	.menu.menuDataviewFilterList,
+	.menu.menuDataviewFilterValues,
 	.menu.menuDataviewSort
 	{
         .item:hover::before { background: rgba(172, 169, 150, 0.1); }
