--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -21,11 +21,17 @@
 				.icon.arrow { display: none; }
 			}
 
+			.condition { margin-right: 4px; }
+			.value { white-space: nowrap; overflow: hidden; }
+			.tagItem { margin-right: 4px; }
+			.element { display: inline-block; vertical-align: middle; }
+
 			.txt { width: calc(100% - 72px); line-height: 22px; }
 		}
 
-		.item:hover {
+		.item:hover, .item.hover {
 			.icon.delete { opacity: 1; }
+			.txt { margin-right: 6px; width: calc(100% - 122px); }
 		}
 
 		.item.add { display: block; }
@@ -36,11 +42,24 @@
 
 	.menu.menuDataviewFilterValues { width: 360px; }
 	.menu.menuDataviewFilterValues {
-		.select { border: 0px; padding: 0px; display: block; }
+		.item { display: flex; }
+
+		.select { border: 0px; padding: 0px; display: block; width: 100%; }
 		.select:hover, .select.active { background: none; }
 		.select {
 			.icon.arrow { background-image: url('~img/arrow/filter.svg') !important; }
 		}
+		.item.add:hover::before, .item.add.hover:hover::before { opacity: 1 !important; }
+
+		.item {
+			.clickable { width: 100%; height: 20px; }
+			.buttons { position: absolute; right: 14px; top: 4px; }
+		}
+		.item:hover, .item.hover {
+			.clickable { margin-right: 6px; width: calc(100% - 30px); }
+		}
+
+		.tagItem { vertical-align: top; margin-top: 1px; }
 
 		.input { border: 0px; padding: 0px; height: 20px; }
 	}
